--- a/pallets/ajuna-awesome-avatars/Cargo.toml
+++ b/pallets/ajuna-awesome-avatars/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 description = "Ajuna Network pallet used to play Awesome Avatars"
 name        = "pallet-ajuna-awesome-avatars"
-version     = "0.1.0"
 
 authors.workspace    = true
 edition.workspace    = true
 homepage.workspace   = true
 repository.workspace = true
+version.workspace    = true
 
 [package.metadata.docs.rs]
 targets = [ "x86_64-unknown-linux-gnu" ]
