--- a/pallets/ajuna-awesome-avatars/benchmarking/Cargo.toml
+++ b/pallets/ajuna-awesome-avatars/benchmarking/Cargo.toml
@@ -32,6 +32,7 @@ sp-runtime                                 = { workspace = true }
 sp-std                                     = { workspace = true }
 
 # Ajuna
+pallet-ajuna-affiliates      = { workspace = true }
 pallet-ajuna-nft-transfer    = { workspace = true }
 pallet-ajuna-awesome-avatars = { workspace = true }
 
@@ -57,6 +58,7 @@ std = [
     "frame-benchmarking/std",
     "frame-support/std",
     "frame-system/std",
+    "pallet-ajuna-affiliates/std",
     "pallet-ajuna-awesome-avatars/std",
     "pallet-ajuna-nft-transfer/std",
     "pallet-balances/std",
@@ -72,6 +74,7 @@ std = [
 try-runtime = [
     "frame-support/try-runtime",
     "frame-system/try-runtime",
+    "pallet-ajuna-affiliates/try-runtime",
     "pallet-ajuna-awesome-avatars/try-runtime",
     "pallet-ajuna-nft-transfer/try-runtime",
     "pallet-balances/try-runtime",
