--- a/pallets/ajuna-affiliates/Cargo.toml
+++ b/pallets/ajuna-affiliates/Cargo.toml
@@ -13,12 +13,12 @@ targets = [ "x86_64-unknown-linux-gnu" ]
 
 [dependencies]
 # Substrate (wasm)
-frame-support                              = { workspace = true }
-frame-system                               = { workspace = true }
-parity-scale-codec                         = { workspace = true, features = [ "derive", "max-encoded-len" ] }
-scale-info                                 = { workspace = true, features = [ "derive" ] }
-sp-runtime                                 = { workspace = true }
-sp-std                                     = { workspace = true }
+frame-support      = { workspace = true }
+frame-system       = { workspace = true }
+parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
+scale-info         = { workspace = true, features = [ "derive" ] }
+sp-runtime         = { workspace = true }
+sp-std             = { workspace = true }
 
 [dev-dependencies]
 pallet-balances = { workspace = true }
@@ -32,6 +32,7 @@ std = [
     "frame-support/std",
     "frame-system/std",
     "pallet-balances/std",
+    "sp-io/std",
     "sp-runtime/std",
 ]
 try-runtime = [ "frame-support/try-runtime" ]
