--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,4 @@ pallet-ajuna-battle-mogs                  = { path = "pallets/ajuna-battle-mogs"
 pallet-ajuna-awesome-avatars-benchmarking = { path = "pallets/ajuna-awesome-avatars/benchmarking", default-features = false }
 pallet-ajuna-nft-transfer                 = { path = "pallets/ajuna-nft-transfer", default-features = false }
 pallet-ajuna-nft-staking                  = { path = "pallets/ajuna-nft-staking", default-features = false }
+pallet-ajuna-tournament                   = { path = "pallets/ajuna-tournament", default-features = false }
