--- a/pallets/ajuna-awesome-avatars/benchmarking/Cargo.toml
+++ b/pallets/ajuna-awesome-avatars/benchmarking/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 description = "Ajuna Network pallet used for Awesome Avatars benchmarking"
-name        = "pallet-ajuna-awesome-avatars-benchmarking"
+name = "pallet-ajuna-awesome-avatars-benchmarking"
 
-authors.workspace    = true
-edition.workspace    = true
-homepage.workspace   = true
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
 repository.workspace = true
-version.workspace    = true
+version.workspace = true
 
 [package.metadata.docs.rs]
-targets = [ "x86_64-unknown-linux-gnu" ]
+targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 # General
@@ -17,31 +17,32 @@ hex = { workspace = true, features = ["alloc"] }
 log = { workspace = true }
 
 # Substrate - FRAME
-frame-benchmarking                         = { workspace = true, optional = true }
-frame-support                              = { workspace = true }
-frame-system                               = { workspace = true }
-pallet-balances                            = { workspace = true }
+frame-benchmarking = { workspace = true, optional = true }
+frame-support = { workspace = true }
+frame-system = { workspace = true }
+pallet-balances = { workspace = true }
 pallet-insecure-randomness-collective-flip = { workspace = true }
-pallet-nfts                                = { workspace = true }
+pallet-nfts = { workspace = true }
 # Substrate - SCALE codec
-parity-scale-codec                         = { workspace = true, features = [ "derive", "max-encoded-len" ] }
-scale-info                                 = { workspace = true, features = [ "derive" ] }
+parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
+scale-info = { workspace = true, features = ["derive"] }
 # Substrate - Primitives
-sp-io                                      = { workspace = true }
-sp-runtime                                 = { workspace = true }
-sp-std                                     = { workspace = true }
+sp-io = { workspace = true }
+sp-runtime = { workspace = true }
+sp-std = { workspace = true }
 
 # Ajuna
-pallet-ajuna-affiliates      = { workspace = true }
-pallet-ajuna-nft-transfer    = { workspace = true }
+pallet-ajuna-affiliates = { workspace = true }
+pallet-ajuna-nft-transfer = { workspace = true }
 pallet-ajuna-awesome-avatars = { workspace = true }
+pallet-ajuna-tournament = { workspace = true }
 
 [dev-dependencies]
 # Substrate - Primitives
 sp-core = { workspace = true }
 
 [features]
-default = [ "std" ]
+default = ["std"]
 runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
@@ -61,6 +62,7 @@ std = [
     "pallet-ajuna-affiliates/std",
     "pallet-ajuna-awesome-avatars/std",
     "pallet-ajuna-nft-transfer/std",
+    "pallet-ajuna-tournament/std",
     "pallet-balances/std",
     "pallet-insecure-randomness-collective-flip/std",
     "pallet-nfts/std",
@@ -77,6 +79,7 @@ try-runtime = [
     "pallet-ajuna-affiliates/try-runtime",
     "pallet-ajuna-awesome-avatars/try-runtime",
     "pallet-ajuna-nft-transfer/try-runtime",
+    "pallet-ajuna-tournament/try-runtime",
     "pallet-balances/try-runtime",
     "pallet-insecure-randomness-collective-flip/try-runtime",
     "pallet-nfts/try-runtime",
