--- a/pallets/ajuna-tournament/Cargo.toml
+++ b/pallets/ajuna-tournament/Cargo.toml
@@ -21,8 +21,8 @@ sp-runtime         = { workspace = true }
 sp-std             = { workspace = true }
 
 [dev-dependencies]
-pallet-balances = { workspace = true }
-sp-io           = { workspace = true }
+pallet-balances = { workspace = true, features = ["std"] }
+sp-io           = { workspace = true, features = ["std"] }
 
 [features]
 default = [ "std" ]
@@ -31,8 +31,6 @@ std = [
     "scale-info/std",
     "frame-support/std",
     "frame-system/std",
-    "pallet-balances/std",
-    "sp-io/std",
     "sp-runtime/std",
 ]
 try-runtime = [ "frame-support/try-runtime" ]
