--- a/pallets/ajuna-tournament/Cargo.toml
+++ b/pallets/ajuna-tournament/Cargo.toml
@@ -17,6 +17,7 @@ frame-support      = { workspace = true }
 frame-system       = { workspace = true }
 parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
 scale-info         = { workspace = true, features = [ "derive" ] }
+sp-arithmetic      = { workspace = true }
 sp-runtime         = { workspace = true }
 sp-std             = { workspace = true }
 
@@ -31,6 +32,7 @@ std = [
     "scale-info/std",
     "frame-support/std",
     "frame-system/std",
+    "sp-arithmetic/std",
     "sp-runtime/std",
 ]
 try-runtime = [ "frame-support/try-runtime" ]
