--- a/orml-benchmarks/Cargo.toml
+++ b/orml-benchmarks/Cargo.toml
@@ -10,3 +10,24 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
+orml-vesting = { features = ["runtime-benchmarks"], workspace = true }
+
+frame-benchmarking = { features = ["runtime-benchmarks"], workspace = true }
+frame-support = { features = ["runtime-benchmarks"], workspace = true }
+frame-system = { features = ["runtime-benchmarks"], workspace = true }
+pallet-balances = {features = ["runtime-benchmarks"], workspace = true }
+
+sp-std = { workspace = true }
+sp-runtime = { features = ["runtime-benchmarks"], workspace = true }
+
+[features]
+default = ["std"]
+std = [
+    "orml-vesting/std",
+    "frame-benchmarking/std",
+    "frame-support/std",
+    "frame-system/std",
+    "pallet-balances/std",
+    "sp-std/std",
+    "sp-runtime/std",
+]
