rename orml-benchmarks -> orml-pallets-benchmarking and fix benchmarks

--- a/orml-pallets-benchmarking/Cargo.toml
+++ b/orml-pallets-benchmarking/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 description = "Implement benchmarks for orml pallets"
-name = "orml-benchmarks"
+name = "orml-pallets-benchmarking"
 
 
 authors.workspace = true
