--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ version    = "0.3.0"
 [workspace]
 resolver = "2"
 members = [
-    "orml-benchmarks",
+    "orml-pallets-benchmarking",
     "pallets/*",
     "pallets/ajuna-awesome-avatars/benchmarking",
     "pallets/ajuna-nft-staking/benchmarking",
