--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ version    = "0.6.0"
 [workspace]
 resolver = "2"
 members = [
+    "orml-pallets-benchmarking",
     "pallets/*",
     "pallets/ajuna-awesome-avatars/benchmarking",
     "pallets/ajuna-nft-staking/benchmarking",
@@ -36,6 +37,9 @@ sp-core                                    = { version = "32.0.0", default-featu
 sp-io                                      = { version = "34.0.0", default-features = false }
 sp-runtime                                 = { version = "35.0.0", default-features = false }
 sp-std                                     = { version = "14.0.0", default-features = false }
+
+# orml
+orml-vesting = { version = "0.10.0", default-features = false }
 
 # Ajuna
 pallet-ajuna-affiliates                   = { path = "pallets/ajuna-affiliates", default-features = false }
