[orml-pallets-benchmarking] fix benchmark discovery in node

--- a/orml-pallets-benchmarking/Cargo.toml
+++ b/orml-pallets-benchmarking/Cargo.toml
@@ -13,19 +13,30 @@ version.workspace = true
 parity-scale-codec = { workspace = true }
 scale-info         = { workspace = true }
 
-orml-vesting = { features = ["runtime-benchmarks"], workspace = true }
+orml-vesting = { workspace = true }
 
-frame-benchmarking = { features = ["runtime-benchmarks"], workspace = true }
-frame-support = { features = ["runtime-benchmarks"], workspace = true }
-frame-system = { features = ["runtime-benchmarks"], workspace = true }
-pallet-balances = {features = ["runtime-benchmarks"], workspace = true }
+frame-benchmarking = { workspace = true }
+frame-support = { workspace = true }
+frame-system = { workspace = true }
+pallet-balances = { workspace = true }
 
 sp-io = { workspace = true }
 sp-std = { workspace = true }
-sp-runtime = { features = ["runtime-benchmarks"], workspace = true }
+sp-runtime = { workspace = true }
 
 [features]
 default = ["std"]
+# Note: Either the `benchmarks!` or the `define_benchmarks!` macro demand the
+# existence of this feature flags, otherwise the benchmarks can't be found in the
+# node.
+runtime-benchmarks = [
+    "frame-benchmarking/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+    "orml-vesting/runtime-benchmarks",
+    "pallet-balances/frame-benchmarking",
+    "sp-runtime/runtime-benchmarks",
+]
 std = [
     "parity-scale-codec/std",
     "scale-info/std",
