--- a/orml-pallets-benchmarking/Cargo.toml
+++ b/orml-pallets-benchmarking/Cargo.toml
@@ -27,7 +27,7 @@ sp-runtime = { workspace = true }
 [features]
 default = ["std"]
 # Note: Either the `benchmarks!` or the `define_benchmarks!` macro demand the
-# existence of this feature flags, otherwise the benchmarks can't be found in the
+# existence of this feature flag. Otherwise, the benchmarks can't be found in the
 # node.
 runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
