--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,8 @@ orml-vesting = { version = "0.10.0", default-features = false }
 pallet-ajuna-affiliates                   = { path = "pallets/ajuna-affiliates", default-features = false }
 pallet-ajuna-awesome-avatars              = { path = "pallets/ajuna-awesome-avatars", default-features = false }
 pallet-ajuna-battle-mogs                  = { path = "pallets/ajuna-battle-mogs", default-features = false }
+pallet-ajuna-board                        = { path = "pallets/ajuna-board", default-features = false }
+pallet-ajuna-matchmaker                   = { path = "pallets/ajuna-matchmaker", default-features = false }
 pallet-ajuna-awesome-avatars-benchmarking = { path = "pallets/ajuna-awesome-avatars/benchmarking", default-features = false }
 pallet-ajuna-nft-transfer                 = { path = "pallets/ajuna-nft-transfer", default-features = false }
 pallet-ajuna-nft-staking                  = { path = "pallets/ajuna-nft-staking", default-features = false }
