--- a/pallets/ajuna-affiliates/Cargo.toml
+++ b/pallets/ajuna-affiliates/Cargo.toml
@@ -34,5 +34,17 @@ std = [
     "pallet-balances/std",
     "sp-io/std",
     "sp-runtime/std",
+    "sp-std/std",
 ]
-try-runtime = [ "frame-support/try-runtime" ]
+runtime-benchmarks = [
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+    "pallet-balances/runtime-benchmarks",
+    "sp-runtime/runtime-benchmarks",
+]
+try-runtime = [
+    "frame-support/try-runtime",
+    "frame-system/try-runtime",
+    "pallet-balances/try-runtime",
+    "sp-runtime/try-runtime",
+]
