--- a/pallets/ajuna-matchmaker/Cargo.toml
+++ b/pallets/ajuna-matchmaker/Cargo.toml
@@ -29,7 +29,20 @@ default = ["std"]
 std = [
     "parity-scale-codec/std",
     "scale-info/std",
+    "sp-core/std",
+    "sp-io/std",
+    "sp-runtime/std",
+    "sp-std/std",
     "frame-support/std",
     "frame-system/std",
 ]
-try-runtime = [ "frame-support/try-runtime" ]
+runtime-benchmarks = [
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+    "sp-runtime/runtime-benchmarks",
+]
+try-runtime = [
+    "frame-support/try-runtime",
+    "frame-system/try-runtime",
+    "sp-runtime/try-runtime",
+]
