--- a/pallets/ajuna-tournament/Cargo.toml
+++ b/pallets/ajuna-tournament/Cargo.toml
@@ -31,11 +31,26 @@ sp-io           = { workspace = true, features = ["std"] }
 [features]
 default = [ "std" ]
 std = [
+    "log/std",
+    "pallet-balances/std",
     "parity-scale-codec/std",
     "scale-info/std",
+    "sp-io/std",
+    "sp-std/std",
     "frame-support/std",
     "frame-system/std",
     "sp-arithmetic/std",
     "sp-runtime/std",
 ]
-try-runtime = [ "frame-support/try-runtime" ]
+runtime-benchmarks = [
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+    "pallet-balances/runtime-benchmarks",
+    "sp-runtime/runtime-benchmarks",
+]
+try-runtime = [
+    "frame-support/try-runtime",
+    "frame-system/try-runtime",
+    "pallet-balances/try-runtime",
+    "sp-runtime/try-runtime",
+]
