--- a/pallets/ajuna-wildcard/Cargo.toml
+++ b/pallets/ajuna-wildcard/Cargo.toml
@@ -30,22 +30,36 @@ sp-io            = { workspace = true }
 
 [features]
 default = [ "std" ]
-runtime-benchmarks = [
-	"frame-benchmarking/runtime-benchmarks",
-	"pallet-nfts/runtime-benchmarks",
-	"pallet-assets/runtime-benchmarks"
-]
 std = [
-	"scale-info/std",
-	"frame-benchmarking/std",
-	"frame-support/std",
-	"frame-system/std",
-	"sp-core/std",
-	"sp-runtime/std",
-	"pallet-assets/std",
-	"pallet-balances/std",
-	"pallet-nfts/std",
-	"pallet-timestamp/std",
-	"parity-scale-codec/std",
+    "scale-info/std",
+    "frame-benchmarking/std",
+    "frame-support/std",
+    "frame-system/std",
+    "sp-core/std",
+    "sp-io/std",
+    "sp-runtime/std",
+    "pallet-assets/std",
+    "pallet-balances/std",
+    "pallet-nfts/std",
+    "pallet-timestamp/std",
+    "parity-scale-codec/std",
 ]
-try-runtime = [ "frame-support/try-runtime" ]
+runtime-benchmarks = [
+    "frame-benchmarking/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+    "pallet-assets/runtime-benchmarks",
+    "pallet-balances/runtime-benchmarks",
+    "pallet-nfts/runtime-benchmarks",
+    "pallet-timestamp/runtime-benchmarks",
+    "sp-runtime/runtime-benchmarks",
+]
+try-runtime = [
+    "frame-support/try-runtime",
+    "frame-system/try-runtime",
+    "pallet-assets/try-runtime",
+    "pallet-balances/try-runtime",
+    "pallet-nfts/try-runtime",
+    "pallet-timestamp/try-runtime",
+    "sp-runtime/try-runtime",
+]
