--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - develop
+      - v[0-9]+.[0-9]+.[0-9]+-polkadot-v?[0-9]+.[0-9]+.[0-9]+
     paths:
       - "**/*.rs"
       - "**/Cargo.toml"
@@ -14,6 +15,8 @@ on:
   push:
     branches:
       - develop
+      - v[0-9]+.[0-9]+.[0-9]+-polkadot-v?[0-9]+.[0-9]+.[0-9]+
+
 
 # Ensures only one build is run per branch, unless pushing to develop
 concurrency:
