--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,22 +24,23 @@ parity-scale-codec = { version = "3.0.0", default-features = false }
 scale-info         = { version = "2.1.1", default-features = false }
 
 # Substrate
-frame-benchmarking                         = { version = "32.0.0", default-features = false }
-frame-support                              = { version = "32.0.0", default-features = false }
-frame-system                               = { version = "32.0.0", default-features = false }
-pallet-assets                              = { version = "33.0.0", default-features = false }
-pallet-balances                            = { version = "33.0.0", default-features = false }
-pallet-insecure-randomness-collective-flip = { version = "20.0.0", default-features = false }
-pallet-nfts                                = { version = "26.0.0", default-features = false }
-pallet-timestamp                           = { version = "31.0.0", default-features = false }
+frame-benchmarking                         = { version = "34.0.0", default-features = false }
+frame-support                              = { version = "34.0.0", default-features = false }
+frame-system                               = { version = "34.0.1", default-features = false }
+pallet-assets                              = { version = "35.0.0", default-features = false }
+pallet-balances                            = { version = "35.0.0", default-features = false }
+pallet-insecure-randomness-collective-flip = { version = "22.0.0", default-features = false }
+pallet-nfts                                = { version = "28.0.0", default-features = false }
+pallet-timestamp                           = { version = "33.0.0", default-features = false }
 sp-arithmetic                              = { version = "26.0.0", default-features = false }
-sp-core                                    = { version = "32.0.0", default-features = false }
-sp-io                                      = { version = "34.0.0", default-features = false }
-sp-runtime                                 = { version = "35.0.0", default-features = false }
+sp-core                                    = { version = "33.0.1", default-features = false }
+sp-io                                      = { version = "36.0.0", default-features = false }
+sp-runtime                                 = { version = "37.0.0", default-features = false }
 sp-std                                     = { version = "14.0.0", default-features = false }
 
 # orml
-orml-vesting = { version = "0.10.0", default-features = false }
+orml-vesting = { git = "https://github.com/ajuna-network/open-runtime-module-library", branch = "cl/polkadot-v1.12.0-Cargo"}
+#orml-vesting = { version = "0.10.0", default-features = false }
 
 # Ajuna
 pallet-ajuna-affiliates                   = { path = "pallets/ajuna-affiliates", default-features = false }
