--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,17 @@ sp-io                                      = { version = "36.0.0", default-featu
 sp-runtime                                 = { version = "37.0.0", default-features = false }
 sp-std                                     = { version = "14.0.0", default-features = false }
 
+# Polkadot
+pallet-xcm                    = { version = "13.0.0", default-features = false }
+polkadot-parachain-primitives = { version = "12.0.0", default-features = false }
+staging-xcm                   = { version = "13.0.1", default-features = false }
+staging-xcm-builder           = { version = "13.0.0", default-features = false }
+staging-xcm-executor          = { version = "13.0.0", default-features = false }
+
 # orml
 orml-vesting = { version = "0.12.0", default-features = false }
+orml-xcm     = { version = "0.12.0", default-features = false }
+orml-xtokens = { version = "0.12.0", default-features = false }
 
 # Ajuna
 pallet-ajuna-affiliates                   = { path = "pallets/ajuna-affiliates", default-features = false }
