--- a/pallets/ajuna-awesome-avatars/Cargo.toml
+++ b/pallets/ajuna-awesome-avatars/Cargo.toml
@@ -30,9 +30,10 @@ sp-runtime         = { workspace = true }
 sp-std             = { workspace = true }
 
 # Ajuna
-pallet-ajuna-affiliates   = { workspace = true }
-pallet-ajuna-nft-transfer = { workspace = true }
-pallet-ajuna-tournament   = { workspace = true }
+pallet-ajuna-affiliates    = { workspace = true }
+pallet-ajuna-battle-royale = { workspace = true }
+pallet-ajuna-nft-transfer  = { workspace = true }
+pallet-ajuna-tournament    = { workspace = true }
 
 [dev-dependencies]
 # Substrate - FRAME
@@ -52,6 +53,7 @@ std = [
     "frame-support/std",
     "frame-system/std",
     "pallet-ajuna-affiliates/std",
+    "pallet-ajuna-battle-royale/std",
     "pallet-ajuna-nft-transfer/std",
     "pallet-ajuna-tournament/std",
     "pallet-balances/std",
@@ -69,6 +71,7 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
     "pallet-ajuna-affiliates/runtime-benchmarks",
+    "pallet-ajuna-battle-royale/runtime-benchmarks",
     "pallet-ajuna-nft-transfer/runtime-benchmarks",
     "pallet-ajuna-tournament/runtime-benchmarks",
     "pallet-balances/runtime-benchmarks",
@@ -79,6 +82,7 @@ try-runtime = [
     "frame-support/try-runtime",
     "frame-system/try-runtime",
     "pallet-ajuna-affiliates/try-runtime",
+    "pallet-ajuna-battle-royale/try-runtime",
     "pallet-ajuna-nft-transfer/try-runtime",
     "pallet-ajuna-tournament/try-runtime",
     "pallet-balances/try-runtime",
