--- a/pallets/ajuna-awesome-avatars/benchmarking/Cargo.toml
+++ b/pallets/ajuna-awesome-avatars/benchmarking/Cargo.toml
@@ -36,6 +36,7 @@ pallet-ajuna-affiliates = { workspace = true }
 pallet-ajuna-nft-transfer = { workspace = true }
 pallet-ajuna-awesome-avatars = { workspace = true }
 pallet-ajuna-tournament = { workspace = true }
+pallet-ajuna-battle-royale = { workspace = true }
 
 [dev-dependencies]
 # Substrate - Primitives
@@ -51,6 +52,7 @@ std = [
     "frame-system/std",
     "pallet-ajuna-affiliates/std",
     "pallet-ajuna-awesome-avatars/std",
+    "pallet-ajuna-battle-royale/std",
     "pallet-ajuna-nft-transfer/std",
     "pallet-ajuna-tournament/std",
     "pallet-balances/std",
@@ -69,6 +71,7 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "pallet-ajuna-affiliates/runtime-benchmarks",
     "pallet-ajuna-awesome-avatars/runtime-benchmarks",
+    "pallet-ajuna-battle-royale/runtime-benchmarks",
     "pallet-ajuna-nft-transfer/runtime-benchmarks",
     "pallet-ajuna-tournament/runtime-benchmarks",
     "pallet-balances/runtime-benchmarks",
@@ -80,6 +83,7 @@ try-runtime = [
     "frame-system/try-runtime",
     "pallet-ajuna-affiliates/try-runtime",
     "pallet-ajuna-awesome-avatars/try-runtime",
+    "pallet-ajuna-battle-royale/try-runtime",
     "pallet-ajuna-nft-transfer/try-runtime",
     "pallet-ajuna-tournament/try-runtime",
     "pallet-balances/try-runtime",
