--- a/pallets/ajuna-battle-royale/Cargo.toml
+++ b/pallets/ajuna-battle-royale/Cargo.toml
@@ -13,6 +13,7 @@ targets = [ "x86_64-unknown-linux-gnu" ]
 
 [dependencies]
 # General
+bitvec = { workspace = true }
 hex = { workspace = true, features = ["alloc"] }
 log = { workspace = true }
 
@@ -37,6 +38,7 @@ sp-core = { workspace = true }
 [features]
 default = [ "std" ]
 std = [
+    "bitvec/std",
     "hex/std",
     "log/std",
     "pallet-balances/std",
