extract everything possible from AAA to nft-transfer (except for tests); compiles

--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -11,8 +11,12 @@ version.workspace = true
 parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
 scale-info         = { workspace = true, features = [ "derive" ] }
 
+# Substrate frame
+frame-support = { workspace = true}
+
 [features]
 std = [
+    "frame-support/std",
     "parity-scale-codec/std",
     "scale-info/std",
 ]
