--- a/pallets/ajuna-nft-transfer/Cargo.toml
+++ b/pallets/ajuna-nft-transfer/Cargo.toml
@@ -12,6 +12,8 @@ version.workspace    = true
 targets = [ "x86_64-unknown-linux-gnu" ]
 
 [dependencies]
+# Ajuna
+ajuna-primitives   = {workspace = true}
 # Substrate - FRAME
 frame-support      = { workspace = true }
 frame-system       = { workspace = true }
@@ -32,6 +34,7 @@ sp-io           = { workspace = true }
 [features]
 default = [ "std" ]
 std = [
+    "ajuna-primitives/std",
     "frame-support/std",
     "frame-system/std",
     "pallet-balances/std",
