--- a/pallets/ajuna-awesome-avatars/Cargo.toml
+++ b/pallets/ajuna-awesome-avatars/Cargo.toml
@@ -70,6 +70,7 @@ runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
+    "ajuna-primitives/runtime-benchmarks",
     "pallet-ajuna-affiliates/runtime-benchmarks",
     "pallet-ajuna-nft-transfer/runtime-benchmarks",
     "pallet-ajuna-tournament/runtime-benchmarks",
