--- a/pallets/ajuna-nft-transfer/Cargo.toml
+++ b/pallets/ajuna-nft-transfer/Cargo.toml
@@ -12,6 +12,8 @@ version.workspace    = true
 targets = [ "x86_64-unknown-linux-gnu" ]
 
 [dependencies]
+# Ajuna
+ajuna-primitives   = { workspace = true }
 # Substrate - FRAME
 frame-support      = { workspace = true }
 frame-system       = { workspace = true }
@@ -21,6 +23,12 @@ scale-info         = { workspace = true, features = [ "derive" ] }
 # Substrate - Primitives
 sp-runtime         = { workspace = true }
 sp-std             = { workspace = true }
+
+# Benchmarking
+frame-benchmarking = { workspace = true, optional = true }
+pallet-balances    = { workspace = true, optional = true }
+pallet-nfts        = { workspace = true, optional = true }
+sp-io              = { workspace = true, optional = true }
 
 [dev-dependencies]
 # Substrate - FRAME
@@ -32,21 +40,27 @@ sp-io           = { workspace = true }
 [features]
 default = [ "std" ]
 std = [
+    "ajuna-primitives/std",
     "frame-support/std",
     "frame-system/std",
-    "pallet-balances/std",
-    "pallet-nfts/std",
     "parity-scale-codec/std",
     "scale-info/std",
-    "sp-io/std",
     "sp-runtime/std",
     "sp-std/std",
+    # benchmarking optional
+    "frame-benchmarking?/std",
+    "pallet-balances?/std",
+    "pallet-nfts?/std",
+    "sp-io?/std",
 ]
 runtime-benchmarks = [
+    "ajuna-primitives/runtime-benchmarks",
+    "frame-benchmarking",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
-    "pallet-nfts/runtime-benchmarks",
     "pallet-balances/runtime-benchmarks",
+    "pallet-nfts/runtime-benchmarks",
+    "sp-io",
     "sp-runtime/runtime-benchmarks",
 ]
 try-runtime = [
