--- a/pallets/ajuna-affiliates/Cargo.toml
+++ b/pallets/ajuna-affiliates/Cargo.toml
@@ -33,6 +33,7 @@ std = [
     "scale-info/std",
     "frame-support/std",
     "frame-system/std",
+    "ajuna-primitives/std",
     "pallet-balances/std",
     "sp-io/std",
     "sp-runtime/std",
@@ -41,6 +42,7 @@ std = [
 runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
+    "ajuna-primitives/runtime-benchmarks",
     "pallet-balances/runtime-benchmarks",
     "sp-runtime/runtime-benchmarks",
 ]
