--- a/pallets/ajuna-nft-transfer/Cargo.toml
+++ b/pallets/ajuna-nft-transfer/Cargo.toml
@@ -55,7 +55,7 @@ std = [
 ]
 runtime-benchmarks = [
     "ajuna-primitives/runtime-benchmarks",
-    "frame-benchmarking",
+    "frame-benchmarking/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
     "pallet-balances/runtime-benchmarks",
